# Practice-tool

./: CONTEXT.md  README.md  grep.exe.stackdump
backend/: README.md  main.go  main_test.go  pyproject.toml
backend/context/: skills_loader.py
backend/ingestion-pipeline/: Dockerfile.sandbox  INGESTION_README.md  __init__.py  chunker.py  cli.py  extractors.py  generator.py  normaliser.py  pipeline.py  pipeline_stages.py  problems.json  pyproject.toml  structure.py  test_ingestion.py
backend/ingestion-pipeline/pipeline_stages/: __init__.py  catalog_merger.py  config.py  dedup_checker.py  retry_orchestrator.py  review_queue.py  validator.py
backend/memory/: manager.py
backend/storage/: database.py
backend/tests/: conftest.py  test_event_emitter.py
data/: mr_chapters_exercises.json  mr_v2_exercises.json  problems.json  problems_robotics.json
docs/: handoff-adaptive-practice-workspace.md  prd-adaptive-practice-workspace.md  prd-memory-layer.md  ui-ux-interface-design-brief.md
docs/adr/: 0001-graph-layer-starts-with-graphiti-kuzu.md  0002-retrieval-layer-starts-with-qdrant.md  0003-ai-runtime-uses-pydantic-ai-first.md  0004-ingestion-produces-multiple-artifact-types.md  0005-memory-events-start-with-learning-loop-events.md  0006-context-builder-uses-fixed-slots-with-controlled-retrieval.md  0007-context-budget-defaults-to-conservative-with-deep-source-mode.md  0008-artifact-workflows-use-structured-templates-with-editable-prompts.md  (+4 more)
docs/reference-images/: README.md
frontend/: .cta.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
scratch/: check_outline.py  check_preview.py  inspect_exercise_headers.py  inspect_full_outline.py  inspect_headers_footers.py  inspect_outlines.py  test_all_chapters.py  test_parser.py  test_smart_clean.py  toc.txt
scripts/: book_to_problems.py  expand_learning_content.mjs  extract_mr_structure.py  extract_mr_v2_exercises.py  extract_toc.py  generate_all_exercises_demo.py  read_pdf_info.py  validate_catalog.py
(+75 files in other folders)
