[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "learning-platform-ingestion"
version     = "0.1.0"
description = "Ingestion pipeline for the personal agentic learning platform"
requires-python = ">=3.12"

dependencies = [
    # Core LLM layer
    "litellm>=1.50",
    "instructor>=1.3",
    "pydantic>=2.7",

    # PDF extraction
    "pymupdf4llm>=0.0.17",       # fast, clean PDFs
    "pdfminer.six>=20231228",    # fallback text extraction

    # Web extraction
    "trafilatura>=1.12",         # fast static HTML → markdown
    "crawl4ai>=0.4",             # JS-rendered pages

    # GitHub / code
    "gitpython>=3.1",

    # Embeddings and vector store
    "sentence-transformers>=3.1",
    "chromadb>=0.5",
    "numpy>=1.26",

    # HTTP
    "httpx>=0.27",

    # Utilities
    "tiktoken>=0.7",             # token counting for budget enforcement
    "rich>=13.7",                # CLI output
]

[project.optional-dependencies]
# Heavy optional deps — install only when needed
docling = [
    "docling>=2.5",              # OCR for scanned PDFs, equation detection
]
youtube = [
    "faster-whisper>=1.0",       # local transcription, no API cost
    "yt-dlp>=2024.11",           # YouTube download
]
epub = [
    "ebooklib>=0.18",            # EPUB extraction
]
latex = []                        # no extra deps — pure regex on .tex files

# Full install — everything
all = [
    "learning-platform-ingestion[docling,youtube,epub]",
]

# Development
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ingest = "ingestion.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version     = "3.12"
strict             = false
ignore_missing_imports = true
